# corrcal

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pre_commit.yaml  test_suite.yaml
ci/: tests.yaml
corrcal/: __init__.py  _cfuncs.py  beams.py  calibrate.py  cfuncs.py  corrcal.py  covdata.py  covh5.py  gridding.py  io.py  linalg.py  mock_sky.py  models.py  noise.py  optimize.py  parsers.py  sparse.py  utils.py
corrcal/data/: example_source_catalog.npz
corrcal/src/: c_funcs.c  c_funcs.h  corrcal_c_funcs.c  corrcal_c_funcs.h
corrcal/tests/: conftest.py  test_gridding.py  test_linalg.py  test_optimize.py  test_parsers.py  test_sparse.py  test_utils.py
docs/: algorithm.rst
docs/tutorials/: Basic Validation.ipynb  Diffuse Covariance with NF Beam.ipynb  Diffuse with Airy Beam.ipynb  Diffuse with NF Beam.ipynb  Diffuse with Uniform Beam.ipynb  Equivalence Testing.ipynb  Mock Diffuse+Point with Airy Beam and Noise.ipynb  Mock Diffuse+Point with Airy Beam.ipynb  Mock Diffuse+Point with NF Beam.ipynb  Model Creation.ipynb  Point Sources with Airy Beam.ipynb  Point Sources with NF Beam.ipynb  Retry.ipynb  Single Source Test.ipynb  Sparse_Testing.ipynb  Split Testing.ipynb  Testing.ipynb  Timing Estimates.ipynb  calibration_example.ipynb  eGSM with NF Beam.ipynb  test_real_imag_split.ipynb
docs/tutorials/validation_tests/: Diffuse with Uniform Beam.ipynb  GLEAM with NF Beam.ipynb  Mock Diffuse+Point with NF Beam.ipynb  Point Sources with Airy Beam.ipynb  eGSM with Airy Beam.ipynb  eGSM with NF Beam.ipynb  eGSM with Uniform Beam.ipynb  eGSM+GLEAM with NF Beam.ipynb
scripts/: corrcal_run.py  corrcal_sim_run.py  jon_test.py  nonred_tests.py
