# Most of this copied from what's up in hera_sim
# Refer to the setuptools docs about using setup-cfg-files for
# more information on how to update this file.

[metadata]
name = corrcal
description = A package for running Correlation Calibration
author = Robert Pascua
author_email = robert.pascua@utoronto.ca
license = BSD
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/r-pascua/corrcal
project_urls =
    Documentation = https://corrcal.readthedocs.org
platforms = ubuntu
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
#scripts =

install_requires =
    numpy>=1.14
    scipy

[options.packages.find]
exclude =
    tests

[options.extras_require]
docs =
    sphinx>=1.8
    nbsphinx
    ipython
    sphinx_autorun
    numpydoc>=0.8
    nbsphinx
tests =
    boost
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
    pre-commit
dev =
    boost
    sphinx>=1.8
    nbsphinx
    ipython
    sphinx_autorun
    numpydoc>=0.8
    nbsphinx
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
    pre-commit

[tool:pytest]
addopts =
    --cov corrcal
    --cov-config=.coveragerc
    --cov-report xml:./coverage.xml
    --durations=25
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = corrcal/tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
